# turiya

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RECOVERY.md  SECURITY.md  backup.conf  backup.sh  com.amir.restic-backup.plist.template  com.amir.turiya.plist.template  config.example.toml  install.sh  pyproject.toml  query.sh  restore.sh  status.sh  uninstall.sh
.claude/: CLAUDE.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  scorecard.yml  zizmor.yml
docs/adr/: 0001-security-scanning-posture.md
docs/superpowers/plans/: 2026-07-01-flags-query-and-json-logging.md  2026-07-01-python-migration.md  2026-07-03-security-scanning-posture.md  2026-07-05-auto-include-config.md  2026-07-05-disaster-recovery-runbook.md  2026-07-05-recover-config-bootstrap.md
docs/superpowers/specs/: 2026-07-01-flags-query-and-json-logging-design.md  2026-07-01-python-migration-design.md  2026-07-02-direct-invocation-design.md  2026-07-05-auto-include-config-design.md  2026-07-05-disaster-recovery-runbook-design.md  2026-07-05-recover-config-bootstrap-design.md
lib/: common.sh  logging.sh
src/turiya/: __init__.py  cli.py  config.py  errors.py  keychain.py  logging.py  rclone.py  restic.py  scheduling.py
src/turiya/operations/: backup.py  query.py  recover_config.py  restore.py  setup.py  status.py
src/turiya/templates/: launchd.plist.tmpl
tests/: conftest.py  test_cli.py  test_config.py  test_errors.py  test_keychain.py  test_logging.py  test_rclone.py  test_recover_config.py  test_restic.py  test_scheduling.py  test_setup.py  test_smoke.py
tests/fixtures/: valid_config.toml
tests/integration/: test_backup.py  test_harness_smoke.py  test_query.py  test_recover_config.py  test_restore.py  test_status.py
