[project]
name = "turiya"
version = "2.0.0"
description = "Automated encrypted multi-cloud backups via restic + rclone on macOS"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.scripts]
turiya = "turiya.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turiya"]

[dependency-groups]
dev = ["pytest>=8", "mypy>=1.10", "ty>=0.0.1", "ruff>=0.5"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.ty]
# ty is configured here; defaults are fine for now

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
