[project]
name = "turiya"
version = "2.1.0"
description = "Automated encrypted multi-cloud backups via restic + rclone on macOS"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "typer>=0.27.0",
    "pydantic>=2.7",
]

[project.scripts]
turiya = "turiya.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turiya"]

[dependency-groups]
dev = ["pytest>=8", "mypy>=1.10", "ty>=0.0.1", "ruff>=0.5"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
# S603 fires on every subprocess.run regardless of safety (detects nothing on
# its own); S607 fires because we resolve system tools (restic/rclone/launchctl/
# sudo/find/security) via PATH by design. The injection-detecting rules in the S
# family (S602 shell=True, S604, S605, S609) stay active as a guardrail.
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
# Test code legitimately uses asserts (S101), dummy credentials (S105/S106),
# hardcoded temp paths (S108), and spawns subprocesses (S603/S607).
"tests/**" = ["S101", "S105", "S106", "S108", "S603", "S607"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.ty]
# ty is configured here; defaults are fine for now

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
